# CSVXLM2

./: .gitignore  AGENTS.md  CSVからXML変換詳細手順説明.txt  LICENSE  README.md  README_JA.md  TEST.csv  cc08_V08.xsd  cleanup_logging_script.py  co08_V08.xsd  gc08_V08.xsd  hc08_V08.xsd  hg08_V08.xsd  inject_logging_script.py  ix08_V08.xsd  pyproject.toml  requirements.txt  run_gui.bat  su08_V08.xsd
"b/: CSV\343\201\213\343\202\211XML\345\244\211\346\217\233\350\251\263\347\264\260\346\211\213\351\240\206\350\252\254\346\230\216_utf8.txt"
3610123279/: 10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  9.csv
3610123675/: 1.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv
3610123808/: 198.csv  199.csv  200.csv  202.csv  204.csv  205.csv  206.csv  207.csv  208.csv  209.csv  211.csv  212.csv  213.csv  218.csv  219.csv  220.csv  221.csv  222.csv  223.csv  224.csv  225.csv  226.csv  227.csv  229.csv  230.csv  231.csv  232.csv  233.csv  234.csv  235.csv  236.csv  237.csv  238.csv  239.csv  240.csv  241.csv  242.csv  246.csv  247.csv  248.csv  (+37 more)
40歳未満健診CSV/: 00363044_FKAC522_20240318_001.csv  00363044_FKAC522_20240318_002.csv  00363044_FKAC522_20240318_004.csv  00363044_FKAC522_20240318_005.csv
XSD/: CCV08_template.xml  CDAtemplate-hc18.xml  IXtemplate.xml  SUtemplate.xml  desktop.ini  ix08_V08.xsd  voc_hcgv08.xsd
config_rules/: checkup_settlement_rules.json  config.json  grouped_checkup_rules.json  guidance_settlement_rules.json  health_checkup_full_rules.json  index_rules.json  (+5 more)
(+237 files in other folders)
