[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "csvxlm"
version = "0.1.0"
description = "CSV to MHLW XML conversion and packaging tool"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "CSVXLM Authors"}]
dependencies = [
    "lxml",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["csv_to_xml_converter", "sample_test_mode"]
py-modules = ["main", "gui"]

[project.scripts]
csvxlm = "csv_to_xml_converter.main:main"
